--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -97,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding"
-                android:text="@string/NothingFound"/>
+                android:text="@string/nothing_found"/>
 
         </LinearLayout>
 
@@ -129,7 +129,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="@string/BadConnection"/>
+                    android:text="@string/bad_connection"/>
 
                 <TextView
                     style="@style/SearchActivityNothingFoundTextPH"
@@ -138,7 +138,7 @@
                     android:layout_gravity="center_horizontal"
                     android:gravity="center"
                     android:layout_marginTop="@dimen/medium_padding"
-                    android:text="@string/LoadFailed"/>
+                    android:text="@string/load_failed"/>
             </LinearLayout>
 
             <Button xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -148,7 +148,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="24dp"
                 android:id="@+id/refreshSearchButton"
-                android:text="@string/Refresh" />
+                android:text="@string/refresh" />
 
         </LinearLayout>
 
