History design added. Switch saved state added

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -138,4 +138,10 @@
         <item name="iconTint">@color/black</item>
     </style>
 
+    <style name="SearchHistoryHeader">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+
 </resources>
