--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/InnerActivityLayoutStyle"
-    android:id="@+id/searchActivity">
+    android:id="@+id/searchActivity"
+    style="@style/InnerActivityLayoutStyle">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -26,50 +26,51 @@
             app:iconGravity="textStart" />
     </FrameLayout>
 
-        <FrameLayout
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/padding"
+        android:paddingTop="@dimen/medium_padding"
+        android:paddingEnd="@dimen/padding"
+        android:paddingBottom="@dimen/medium_padding">
+
+        <EditText
+            android:id="@+id/editTextwather"
+            style="@style/SearchActivityTextInput"
             android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/padding"
-            android:paddingTop="@dimen/medium_padding"
-            android:paddingEnd="@dimen/padding"
-            android:paddingBottom="@dimen/medium_padding">
+            android:layout_height="36dp"
+            android:drawableStart="@drawable/icon_search_small"
+            android:drawablePadding="@dimen/medium_padding"
+            android:fontFamily="@font/ys_display_regular"
+            android:hint="@string/search_hint"
+            android:imeOptions="actionDone"
+            android:inputType="textCapWords"
+            android:maxLength="50"
+            android:maxLines="1"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:singleLine="true"
+            android:textAlignment="textStart"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey"
+            android:textSize="@dimen/element_text_size" />
 
-            <EditText
-                android:id="@+id/editTextwather"
-                style="@style/SearchActivityTextInput"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:drawableStart="@drawable/icon_search_small"
-                android:drawablePadding="@dimen/medium_padding"
-                android:fontFamily="@font/ys_display_regular"
-                android:hint="@string/search_hint"
-                android:imeOptions="actionDone"
-                android:inputType="textCapWords"
-                android:maxLength="50"
-                android:maxLines="1"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:singleLine="true"
-                android:textAlignment="textStart"
-                android:textColor="@color/black"
-                android:textColorHint="@color/grey"
-                android:textSize="@dimen/element_text_size" />
+        <ImageView
+            android:id="@+id/clearIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:src="@drawable/clear_button"
+            android:visibility="gone" />
 
-            <ImageView
-                android:id="@+id/clearIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:src="@drawable/clear_button"
-                android:visibility="gone" />
-
-        </FrameLayout>
+    </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/padding">
+        android:layout_marginTop="@dimen/padding"
+        android:visibility="gone">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerSearch"
@@ -87,17 +88,17 @@
             android:visibility="gone">
 
             <ImageView
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/vector_nothing_found_light_mode"/>
+                android:src="@drawable/vector_nothing_found_light_mode" />
 
             <TextView
                 style="@style/SearchActivityNothingFoundTextPH"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding"
-                android:text="@string/nothing_found"/>
+                android:text="@string/nothing_found" />
 
         </LinearLayout>
 
@@ -116,7 +117,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/vector_connection_error_light_mode"/>
+                android:src="@drawable/vector_connection_error_light_mode" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -129,28 +130,65 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="@string/bad_connection"/>
+                    android:text="@string/bad_connection" />
 
                 <TextView
                     style="@style/SearchActivityNothingFoundTextPH"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:gravity="center"
                     android:layout_marginTop="@dimen/medium_padding"
-                    android:text="@string/load_failed"/>
+                    android:gravity="center"
+                    android:text="@string/load_failed" />
             </LinearLayout>
 
             <Button xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/refreshSearchButton"
                 style="@style/RefreshButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="24dp"
-                android:id="@+id/refreshSearchButton"
                 android:text="@string/refresh" />
 
         </LinearLayout>
 
     </FrameLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/padding"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <TextView
+            style="@style/SearchHistoryHeader"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:fontFamily="@font/ys_display_medium"
+            android:gravity="center"
+            android:text="@string/you_searched"
+            android:textSize="19sp"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerSearchHistory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+        <Button xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/clearHistorySearchButton"
+            style="@style/RefreshButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            app:cornerRadius="54dp"
+            android:text="@string/clear_history"
+            android:layout_gravity="center_horizontal"/>
+
+    </LinearLayout>
 </LinearLayout>
