--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -123,4 +123,9 @@
         <item name="iconTint">@color/white</item>
     </style>
 
+    <style name="SearchHistoryHeader">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
