--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -67,6 +67,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/searchResults"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/padding"
