--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,7 +14,7 @@
         <TextView
             style="@style/TitleTextStyle"
             android:layout_marginLeft="52dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/padding_16"
             android:layout_marginRight="100dp"
             android:text="@string/search" />
 
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="104dp"
+            android:layout_marginTop="@dimen/padding_104"
             android:orientation="vertical"
             android:visibility="gone">
 
@@ -108,9 +108,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="104dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="@dimen/padding_24"
+            android:layout_marginTop="@dimen/padding_104"
+            android:layout_marginEnd="@dimen/padding_24"
             android:orientation="vertical"
             android:visibility="gone">
 
@@ -149,7 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/padding_24"
                 android:text="@string/refresh" />
 
         </LinearLayout>
@@ -182,7 +182,7 @@
             android:id="@+id/trackHistoryRV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/padding_8"
             android:nestedScrollingEnabled="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
@@ -191,8 +191,8 @@
             style="@style/RefreshButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="@dimen/padding_24"
+            android:layout_marginBottom="@dimen/padding_24"
             app:cornerRadius="54dp"
             android:text="@string/clear_history"
             android:layout_gravity="center_horizontal"/>
