--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="medium_padding">8dp</dimen>
+    <dimen name="padding_8">8dp</dimen>
     <dimen name="padding">16dp</dimen>
+    <dimen name="padding_16">16dp</dimen>
+    <dimen name="padding_24">24dp</dimen>
+    <dimen name="padding_104">104dp</dimen>
     <dimen name="primary_text_size">22sp</dimen>
     <dimen name="element_text_size">16sp</dimen>
     <dimen name="button_width">328dp</dimen>
