--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">start</item>
-        <item name="android:textSize">@dimen/primary_text_size</item>
+        <item name="android:textSize">@dimen/text_size_22sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/ys_text_medium</item>
         <item name="android:textFontWeight">500</item>
@@ -26,7 +26,7 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/mainScreenButtonTextColor</item>
-        <item name="android:textSize">@dimen/primary_text_size</item>
+        <item name="android:textSize">@dimen/text_size_22sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
         <item name="cornerRadius">16dp</item>
@@ -53,9 +53,9 @@
     <style name="SettingsActivityButtonFrame">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">64dp</item>
-        <item name="android:paddingLeft">@dimen/padding</item>
+        <item name="android:paddingLeft">@dimen/padding_16</item>
         <item name="android:paddingTop">24dp</item>
-        <item name="android:paddingRight">@dimen/padding</item>
+        <item name="android:paddingRight">@dimen/padding_16</item>
     </style>
 
     <style name="SettingsActivityButtonText">
@@ -63,7 +63,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">start</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">@dimen/element_text_size</item>
+        <item name="android:textSize">@dimen/text_size_16sp</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
     </style>
@@ -139,6 +139,11 @@
     </style>
 
     <style name="SearchHistoryHeader">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="PlayerTrackText">
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textColor">@color/black</item>
     </style>
