--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,8 @@
     <dimen name="corner_radius">16dp</dimen>
     <dimen name="small_corner_radius">2dp</dimen>
 
+
+    <dimen name="text_size_13sp">13sp</dimen>
     <dimen name="text_size_14sp">14sp</dimen>
     <dimen name="text_size_16sp">16sp</dimen>
     <dimen name="text_size_22sp">22sp</dimen>
