--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/mainScreenButtonTextColor</item>
+        <item name="android:textColor">@color/custom_black</item>
         <item name="android:textSize">@dimen/text_size_22sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
