--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">start</item>
-        <item name="android:textSize">@dimen/primary_text_size</item>
+        <item name="android:textSize">@dimen/text_size_16sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/ys_text_medium</item>
         <item name="android:textFontWeight">500</item>
@@ -28,9 +28,9 @@
     <style name="SettingsActivityButtonFrame">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">64dp</item>
-        <item name="android:paddingLeft">@dimen/padding</item>
+        <item name="android:paddingLeft">@dimen/padding_16</item>
         <item name="android:paddingTop">24dp</item>
-        <item name="android:paddingRight">@dimen/padding</item>
+        <item name="android:paddingRight">@dimen/padding_16</item>
     </style>
 
     <style name="SettingsActivityButtonText">
@@ -39,7 +39,7 @@
         <item name="android:layout_gravity">start</item>
         <item name="android:text">@string/Dark_Mode</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/element_text_size</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
     </style>
 
     <style name="SettingsActivityButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -90,7 +90,7 @@
     <style name="SearchActivityNothingFoundTextPH">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">@dimen/padding</item>
+        <item name="android:layout_marginTop">@dimen/padding_16</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textSize">19sp</item>
         <item name="android:textColor">@color/white</item>
