--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -5,7 +5,8 @@
     android:id="@+id/playerActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlayerActivity">
+    tools:context=".PlayerActivity"
+    style="PlayerTrackBackGround">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/leftBorder"
@@ -22,14 +23,13 @@
         android:orientation="vertical" />
 
     <ImageButton
+        style="@style/PlayerTrackButtonBack"
         android:id="@+id/playerButtonBack"
         app:layout_constraintTag="playerButtonBack"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginTop="@dimen/padding_4"
         android:layout_marginStart="@dimen/padding_4"
-        app:srcCompat="@drawable/vector_arrow_back"
-        android:backgroundTint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,6 +90,7 @@
         app:constraint_referenced_tags="bandName"/>
 
     <androidx.appcompat.widget.AppCompatImageButton
+        style="@style/PlayerTrackButtonaAddToTrackList"
         android:id="@+id/addToTrackList"
         android:layout_width="51dp"
         android:layout_height="51dp"
@@ -97,11 +98,10 @@
         app:layout_constraintStart_toStartOf="@id/leftBorder"
         app:layout_constraintEnd_toStartOf="@+id/stopPlayerButton"
         app:layout_constraintTop_toBottomOf="@+id/stopPlayerButton"
-        app:layout_constraintBottom_toTopOf="@+id/stopPlayerButton"
-        app:srcCompat="@drawable/vector_add_to_track_list"
-        android:backgroundTint="@color/white"/>
+        app:layout_constraintBottom_toTopOf="@+id/stopPlayerButton"/>
 
     <androidx.appcompat.widget.AppCompatImageButton
+        style="@style/PlayerTrackButtonPlay"
         android:id="@+id/stopPlayerButton"
         app:layout_constraintTag="stopPlayerButton"
         android:layout_width="100dp"
@@ -109,9 +109,7 @@
         android:layout_marginTop="@dimen/padding_30"
         app:layout_constraintTop_toBottomOf="@id/bandNameBarrier"
         app:layout_constraintStart_toEndOf="@id/addToTrackList"
-        app:layout_constraintEnd_toStartOf="@+id/addToFavorites"
-        app:srcCompat="@drawable/vector_stopplayer_button"
-        android:backgroundTint="@color/white"/>
+        app:layout_constraintEnd_toStartOf="@+id/addToFavorites" />
     <TextView
         android:id="@+id/timePlayed"
         app:layout_constraintTag="timePlayed"
@@ -128,15 +126,14 @@
         tools:text="0:30"/>
     
     <androidx.appcompat.widget.AppCompatImageButton
+        style="@style/PlayerTrackButtonaAddToFav"
         android:id="@+id/addToFavorites"
         android:layout_width="51dp"
         android:layout_height="51dp"
         app:layout_constraintStart_toEndOf="@id/stopPlayerButton"
         app:layout_constraintEnd_toStartOf="@id/rightBorder"
         app:layout_constraintBottom_toTopOf="@id/stopPlayerButton"
-        app:layout_constraintTop_toBottomOf="@id/stopPlayerButton"
-        app:srcCompat="@drawable/vector_add_to_favorites"
-        android:backgroundTint="@color/white"/>
+        app:layout_constraintTop_toBottomOf="@id/stopPlayerButton" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/playButtonBarrier"
@@ -158,6 +155,7 @@
         android:text="Длительность"/>
 
     <TextView
+        style="@style/PlayerTrackText"
         android:id="@+id/tracklengthTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -168,7 +166,6 @@
         android:gravity="end"
         android:fontFamily="@font/ys_display_regular"
         android:textSize="@dimen/text_size_13sp"
-        android:textColor="@color/custom_black"
         android:textStyle="bold"
         android:maxLines="1"
         android:maxLength="35"
@@ -189,6 +186,7 @@
         android:text="Альбом"/>
 
     <TextView
+        style="@style/PlayerTrackText"
         android:id="@+id/albumTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -200,7 +198,6 @@
         android:gravity="end"
         android:fontFamily="@font/ys_display_regular"
         android:textSize="@dimen/text_size_13sp"
-        android:textColor="@color/custom_black"
         android:textStyle="bold"
         android:maxLines="1"
         android:maxLength="50"
@@ -221,6 +218,7 @@
         android:text="Год"/>
 
     <TextView
+        style="@style/PlayerTrackText"
         android:id="@+id/albumYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -231,7 +229,6 @@
         android:gravity="end"
         android:fontFamily="@font/ys_display_regular"
         android:textSize="@dimen/text_size_13sp"
-        android:textColor="@color/custom_black"
         android:textStyle="bold"
         android:maxLines="1"
         android:maxLength="35"
@@ -252,6 +249,7 @@
         android:text="Жанр"/>
 
     <TextView
+        style="@style/PlayerTrackText"
         android:id="@+id/trackGenre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -262,7 +260,6 @@
         android:gravity="end"
         android:fontFamily="@font/ys_display_regular"
         android:textSize="@dimen/text_size_13sp"
-        android:textColor="@color/custom_black"
         android:textStyle="bold"
         android:maxLines="1"
         android:maxLength="35"
@@ -283,6 +280,7 @@
         android:text="Страна"/>
 
     <TextView
+        style="@style/PlayerTrackText"
         android:id="@+id/trackCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -293,7 +291,6 @@
         android:gravity="end"
         android:fontFamily="@font/ys_display_regular"
         android:textSize="@dimen/text_size_13sp"
-        android:textColor="@color/custom_black"
         android:textStyle="bold"
         android:maxLines="1"
         android:maxLength="35"
