--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -143,10 +143,34 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="PlayerTrackText">
-        <item name="android:fontFamily">@font/ys_display_medium</item>
-        <item name="android:textColor">@color/black</item>
+    <style name="PlayerTrackBackGround">
+        <item name="backgroundTint">@color/white</item>
     </style>
+
+    <style name="PlayerTrackButtonBack">
+        <item name="android:src">@drawable/vector_arrow_back</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+    </style>
+
+    <style name="PlayerTrackButtonPlay">
+        <item name="android:src">@drawable/vector_stopplayer_button</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+    </style>
+
+    <style name="PlayerTrackButtonaAddToTrackList">
+        <item name="android:src">@drawable/vector_add_to_track_list</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+    </style>
+
+    <style name="PlayerTrackButtonaAddToFav">
+        <item name="android:src">@drawable/vector_add_to_favorites</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+    </style>
+
+    <style name="PlayerTrackText">
+        <item name="android:textColor">@color/custom_black</item>
+    </style>
+
 
 
 </resources>
