--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,7 +42,7 @@
 
     <style name="InnerActivityHeaderFrameLayout">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">56dp</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:layout_marginTop">4dp</item>
         <item name="android:layout_marginBottom">4dp</item>
         <item name="android:layout_marginStart">4dp</item>
@@ -153,8 +153,8 @@
     </style>
 
     <style name="PlayerTrackButtonPlay">
-        <item name="android:src">@drawable/vector_stopplayer_button</item>
-        <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="android:background">@drawable/play_button_selector</item>
+
     </style>
 
     <style name="PlayerTrackButtonaAddToTrackList">
