HomeWork_sprint_14 ready

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="TitleTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -15,7 +16,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/blue</item>
         <item name="android:orientation">vertical</item>
-        </style>
+    </style>
 
     <style name="MainActivityButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
@@ -171,6 +172,9 @@
         <item name="android:textColor">@color/custom_black</item>
     </style>
 
+    <style name="PlayerProgressTrackText">
+        <item name="android:textColor">@color/custom_black</item>
+    </style>
 
 
 </resources>
