--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -115,19 +115,19 @@
 
     <TextView
         android:id="@+id/timePlayed"
-        app:layout_constraintTag="timePlayed"
+        style="@style/PlayerProgressTrackText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/padding_4"
-        app:layout_constraintTop_toBottomOf="@id/stopPlayerButton"
-        app:layout_constraintStart_toStartOf="@id/leftBorder"
-        app:layout_constraintEnd_toStartOf="@id/rightBorder"
-        android:textSize="@dimen/text_size_14sp"
         android:fontFamily="@font/ys_display_medium"
-        android:textColor="@color/custom_black"
+        android:padding="@dimen/padding_4"
+        android:textSize="@dimen/text_size_14sp"
         android:textStyle="bold"
-        tools:text="0:30"/>
-    
+        app:layout_constraintEnd_toStartOf="@id/rightBorder"
+        app:layout_constraintStart_toStartOf="@id/leftBorder"
+        app:layout_constraintTag="timePlayed"
+        app:layout_constraintTop_toBottomOf="@id/stopPlayerButton"
+        tools:text="0:30" />
+
     <androidx.appcompat.widget.AppCompatImageButton
         style="@style/PlayerTrackButtonaAddToFav"
         android:id="@+id/addToFavorites"
