--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -153,13 +153,17 @@
     </style>
 
     <style name="PlayerTrackButtonaAddToFav">
-        <item name="android:src">@drawable/vector_add_to_favorites</item>
+        <item name="android:src">@drawable/vector_add_to_favorites_black_mode</item>
         <item name="android:backgroundTint">@android:color/transparent</item>
         <item name="iconTint">@color/white</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
 
     <style name="PlayerTrackText">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="PlayerProgressTrackText">
         <item name="android:textColor">@color/white</item>
     </style>
 
