--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -177,7 +177,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/padding_16"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 style="@style/SearchHistoryHeader"
