--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -53,6 +53,17 @@
         app:layout_constraintEnd_toStartOf="@id/rightBorder"
         app:srcCompat="@drawable/vector_empty_album_placeholder" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@id/buttonBackBarrier"
+        app:layout_constraintBottom_toBottomOf="@id/bandNameBarrier"
+        app:layout_constraintStart_toStartOf="@id/leftBorder"
+        app:layout_constraintEnd_toStartOf="@id/rightBorder"
+        app:srcCompat="@drawable/vector_empty_album_placeholder"
+        android:visibility="gone"/>
+
     <TextView
         style="@style/PlayerTrackText"
         android:id="@+id/songName"
