--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".player.ui.PlayerActivity"
-    style="PlayerTrackBackGround">
+    style="PlayerTrackBackGround"
+    android:visibility="visible">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/leftBorder"
@@ -51,18 +52,19 @@
         app:layout_constraintTop_toBottomOf="@id/buttonBackBarrier"
         app:layout_constraintStart_toStartOf="@id/leftBorder"
         app:layout_constraintEnd_toStartOf="@id/rightBorder"
-        app:srcCompat="@drawable/vector_empty_album_placeholder" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/buttonBackBarrier"
-        app:layout_constraintBottom_toBottomOf="@id/bandNameBarrier"
-        app:layout_constraintStart_toStartOf="@id/leftBorder"
-        app:layout_constraintEnd_toStartOf="@id/rightBorder"
         app:srcCompat="@drawable/vector_empty_album_placeholder"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="h,1:1"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toBottomOf="@id/buttonBackBarrier"
+        app:layout_constraintBottom_toTopOf="@id/bandNameBarrier"
+        app:layout_constraintStart_toStartOf="@id/leftBorder"
+        app:layout_constraintEnd_toStartOf="@id/rightBorder"/>
+
 
     <TextView
         style="@style/PlayerTrackText"
@@ -312,3 +314,6 @@
         tools:text="Великобритания"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
