--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".player.ui.PlayerActivity"
-    style="PlayerTrackBackGround"
-    android:visibility="visible">
+    style="PlayerTrackBackGround">
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/leftBorder"
@@ -54,16 +54,6 @@
         app:layout_constraintEnd_toStartOf="@id/rightBorder"
         app:srcCompat="@drawable/vector_empty_album_placeholder"
         android:visibility="visible"/>
-    <ProgressBar
-        android:id="@+id/progressbar"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="h,1:1"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@id/buttonBackBarrier"
-        app:layout_constraintBottom_toTopOf="@id/bandNameBarrier"
-        app:layout_constraintStart_toStartOf="@id/leftBorder"
-        app:layout_constraintEnd_toStartOf="@id/rightBorder"/>
 
 
     <TextView
@@ -312,6 +302,31 @@
         android:maxLength="35"
         android:ellipsize="end"
         tools:text="Великобритания"/>
+
+    <FrameLayout
+        style="@style/loadingOverlayStyle"
+        android:id="@+id/loadingOverlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:visibility="visible" />
+        <!--        app:layout_constraintTop_toBottomOf="@id/buttonBackBarrier"-->
+        <!--        app:layout_constraintBottom_toTopOf="@id/bandNameBarrier"-->
+        <!--        app:layout_constraintStart_toStartOf="@id/leftBorder"-->
+        <!--        app:layout_constraintEnd_toStartOf="@id/rightBorder"/>-->
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
