--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -4,7 +4,7 @@
     <style name="MainActivityLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:background">@color/black</item>
+        <item name="android:background">@color/yp_black</item>
         <item name="android:orientation">vertical</item>
     </style>
 
@@ -21,7 +21,7 @@
     <style name="InnerActivityLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:background">@color/black</item>
+        <item name="android:background">@color/yp_black</item>
         <item name="android:orientation">vertical</item>
     </style>
 
@@ -46,7 +46,7 @@
         <item name="android:layout_width">24dp</item>
         <item name="android:layout_height">24dp</item>
         <item name="android:layout_gravity">end</item>
-        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:backgroundTint">@color/yp_black</item>
         <item name="iconTint">@color/white</item>
     </style>
 
@@ -57,7 +57,7 @@
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:layout_marginLeft">4dp</item>
         <item name="android:layout_marginRight">0dp</item>
-        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:backgroundTint">@color/yp_black</item>
         <item name="iconTint">@color/white</item>
     </style>
 
@@ -66,7 +66,7 @@
     </style>
 
     <style name="SearchActivityTrackColor">
-        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:backgroundTint">@color/yp_black</item>
     </style>
 
     <style name="SearchActivityTrackSongText">
@@ -118,7 +118,7 @@
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/yp_black</item>
         <item name="cornerRadius">16dp</item>
         <item name="iconTint">@color/white</item>
     </style>
@@ -129,7 +129,7 @@
     </style>
 
     <style name="PlayerTrackBackGround">
-        <item name="backgroundTint">@color/black</item>
+        <item name="backgroundTint">@color/yp_black</item>
     </style>
 
     <style name="PlayerTrackButtonBack">
@@ -166,6 +166,10 @@
 
     <style name="PlayerProgressTrackText">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="loadingOverlayStyle">
+        <item name="android:background">@color/yp_black</item>
     </style>
 
 
