--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
     <style name="MainActivityLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:background">@color/blue</item>
+        <item name="android:background">@color/yp_blue</item>
         <item name="android:orientation">vertical</item>
     </style>
 
@@ -26,7 +26,7 @@
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/custom_black</item>
+        <item name="android:textColor">@color/yp_black</item>
         <item name="android:textSize">@dimen/text_size_22sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
@@ -169,11 +169,15 @@
     </style>
 
     <style name="PlayerTrackText">
-        <item name="android:textColor">@color/custom_black</item>
+        <item name="android:textColor">@color/yp_black</item>
     </style>
 
     <style name="PlayerProgressTrackText">
-        <item name="android:textColor">@color/custom_black</item>
+        <item name="android:textColor">@color/yp_black</item>
+    </style>
+
+    <style name="loadingOverlayStyle">
+        <item name="android:background">@color/white</item>
     </style>
 
 
