--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -25,6 +25,10 @@
         <item name="android:orientation">vertical</item>
     </style>
 
+    <style name="MediaLibraryLayoutStyle">
+        <item name="android:background">@color/yp_black</item>
+    </style>
+
     <style name="SettingsActivityButtonFrame">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">64dp</item>
@@ -173,6 +177,30 @@
         <item name="android:background">@color/yp_black</item>
     </style>
 
+    <style name="LibraryNothingFoundTextPH">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="TabLayOutTextStyle" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
+    <style name="TabLayoutStyle">
+        <item name="android:background">@color/yp_black</item>
+        <item name="tabIndicatorColor">@color/white</item>
+        <item name="tabTextColor">@color/white</item>
+        <item name="tabTextAppearance">@style/TabLayOutTextStyle</item>
+    </style>
+
+    <style name="ToolBarStyle">
+        <item name="android:navigationIcon">@drawable/vector_player_button_back_black_mode</item>
+        <item name="android:titleTextColor">@color/white</item>
+        <item name="backgroundColor">@color/yp_black</item>
+    </style>
 
 </resources>
