--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,13 +11,6 @@
         <item name="android:textFontWeight">500</item>
     </style>
 
-<!--<style name="MainActivityLayoutStyle">&ndash;&gt;-->
-<!--       <item name="android:layout_width">match_parent</item>-->
-<!--      <item name="android:layout_height">match_parent</item>-->
-<!--      <item name="android:background">@color/white</item>-->
-<!--       <item name="android:orientation">vertical</item>-->
-<!--</style>-->
-
     <style name="MainActivityButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
@@ -145,7 +138,7 @@
     </style>
 
     <style name="PlayerTrackBackGround">
-        <item name="backgroundTint">@color/white</item>
+        <item name="android:background">@color/white</item>
     </style>
 
     <style name="PlayerTrackButtonBack">
@@ -156,7 +149,6 @@
     <style name="PlayerTrackButtonPlay">
         <item name="android:background">@drawable/play_button_background_selector</item>
         <item name="android:foreground">@drawable/play_button_image_selector</item>
-        <!--        android:foreground="@drawable/play_button_image_selector"-->
 
     </style>
 
