--- a/app/src/main/res/layout/medialibrary_fragment.xml
+++ b/app/src/main/res/layout/medialibrary_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".medialibrary.ui.activity.MediaLibraryFragment">
+    tools:context=".medialibrary.ui.root_fragment.MediaLibraryFragment">
 
     <Toolbar
         style="@style/ToolBarStyle"
